tests/paczka1/fuzzy1/28949848.err
Error in line 22: RLuJ A196 34,37
Error in line 19: RLuJ A113 85,2
Error in line 23: RLuJ A196 56,9
Error in line 17: A113 S934 87,6
